[package]
name = "teeconfig"
version = "0.1.0-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13.0"
lalrpop-util = "0.20.0"
bitflags = { version = "2.3.3", features = ["std"] }

[build-dependencies]
lalrpop = "0.20.0"
